# osu-tourneys

./: .gitattributes  .gitignore  .prettierrc.toml  Cargo.toml  README.md  Rocket.toml
src/: auth.rs  db.rs  error.rs  main.rs  osuapi.rs  session.rs
tourney-hub/: package.json  tsconfig.json
tourney-hub/public/: index.html  manifest.json
tourney-hub/src/: App.tsx  Global.d.ts  Mappool.tsx  MappoolMaker.tsx  common.ts  index.tsx  setupProxy.js  styles.css
