[package]
name = "osu_tourneys"
version = "0.1.0"
authors = ["ArcSecant <lightlance7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" , features = ["secrets"] }
dotenv = "0.15.0"
oppai-rs = "0.2.3"
reqwest = { version ="0.11.2", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
thiserror = "1.0.24"
tokio-postgres = { version = "0.7.0", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio = "1.4.0"
futures = "0.3.13"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["json"]